@@ -1,26 +1,34 @@
 package io.dataease.chart.charts.impl;
 
+import com.beust.jcommander.Strings;
+import io.dataease.api.dataset.union.DatasetGroupInfoDTO;
 import io.dataease.chart.charts.ChartHandlerManager;
 import io.dataease.chart.constant.ChartConstants;
 import io.dataease.chart.manage.ChartDataManage;
 import io.dataease.chart.manage.ChartViewManege;
 import io.dataease.chart.utils.ChartDataBuild;
+import io.dataease.constant.SQLConstants;
 import io.dataease.dataset.manage.DatasetTableFieldManage;
-import io.dataease.engine.constant.SQLConstants;
+import io.dataease.engine.func.FunctionConstant;
 import io.dataease.engine.sql.SQLProvider;
 import io.dataease.engine.trans.Dimension2SQLObj;
 import io.dataease.engine.trans.Quota2SQLObj;
 import io.dataease.engine.utils.Utils;
+import io.dataease.exception.DEException;
 import io.dataease.extensions.datasource.api.PluginManageApi;
 import io.dataease.extensions.datasource.dto.DatasetTableFieldDTO;
 import io.dataease.extensions.datasource.dto.DatasourceRequest;
 import io.dataease.extensions.datasource.dto.DatasourceSchemaDTO;
+import io.dataease.extensions.datasource.dto.TableFieldWithValue;
 import io.dataease.extensions.datasource.model.SQLMeta;
 import io.dataease.extensions.datasource.provider.Provider;
+import io.dataease.extensions.datasource.vo.DatasourceConfiguration;
+import io.dataease.extensions.datasource.vo.XpackPluginsDatasourceVO;
 import io.dataease.extensions.view.dto.*;
 import io.dataease.extensions.view.plugin.AbstractChartPlugin;
 import io.dataease.extensions.view.util.ChartDataUtil;
 import io.dataease.extensions.view.util.FieldUtil;
+import io.dataease.license.utils.LicenseUtil;
 import io.dataease.utils.BeanUtils;
 import io.dataease.utils.JsonUtil;
 import jakarta.annotation.PostConstruct;
@@ -39,6 +47,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.text.SimpleDateFormat;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @Component
@@ -84,6 +93,19 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         return (T) new CustomFilterResult(filterList, formatResult.getContext());
     }
 
+    protected void fillDatasourceRequest(DatasourceRequest datasourceRequest, boolean crossDs, Map<Long, DatasourceSchemaDTO> dsMap, Map<String, Object> sqlMap) {
+        datasourceRequest.setIsCross(crossDs);
+        datasourceRequest.setDsList(dsMap);
+        List<TableFieldWithValue> tableFieldWithValues = getTableFieldWithValues(sqlMap);
+        if (CollectionUtils.isNotEmpty(tableFieldWithValues)) {
+            datasourceRequest.setTableFieldWithValues(tableFieldWithValues.stream().map(TableFieldWithValue::copy).toList());
+        }
+    }
+
+    protected List<TableFieldWithValue> getTableFieldWithValues(Map<String, Object> sqlMap) {
+        return (List<TableFieldWithValue>) sqlMap.get("tableFieldWithValues");
+    }
+
     public Map<String, Object> buildResult(ChartViewDTO view, AxisFormatResult formatResult, CustomFilterResult filterResult, List<String[]> data) {
         boolean isDrill = filterResult
                 .getFilterList()
@@ -103,9 +125,9 @@ public class DefaultChartHandler extends AbstractChartPlugin {
             dsList.add(next.getValue().getType());
         }
         boolean needOrder = Utils.isNeedOrder(dsList);
-        boolean crossDs = Utils.isCrossDs(dsMap);
+        boolean crossDs = ((DatasetGroupInfoDTO) formatResult.getContext().get("dataset")).getIsCross();
         DatasourceRequest datasourceRequest = new DatasourceRequest();
-        datasourceRequest.setDsList(dsMap);
+        fillDatasourceRequest(datasourceRequest, crossDs, dsMap, sqlMap);
         var xAxis = formatResult.getAxisMap().get(ChartAxis.xAxis);
         var yAxis = formatResult.getAxisMap().get(ChartAxis.yAxis);
         var allFields = (List<ChartViewFieldDTO>) filterResult.getContext().get("allFields");
@@ -117,9 +139,11 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         logger.debug("calcite chart sql: " + querySql);
         List<String[]> data = (List<String[]>) provider.fetchResultField(datasourceRequest).get("data");
         //自定义排序
-        data = ChartDataUtil.resultCustomSort(xAxis, data);
+        data = ChartDataUtil.resultCustomSort(xAxis, yAxis, view.getSortPriority(), data);
         //快速计算
-        quickCalc(xAxis, yAxis, data);
+        var extStack = formatResult.getAxisMap().get(ChartAxis.extStack);
+        var xAxisExt = formatResult.getAxisMap().get(ChartAxis.xAxisExt);
+        quickCalc(xAxis, yAxis, xAxisExt, extStack, view.getType(), data);
         //数据重组逻辑可重载
         var result = this.buildResult(view, formatResult, filterResult, data);
         T calcResult = (T) new ChartCalcDataResult();
@@ -144,6 +168,10 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         if (view.getIsExcelExport()) {
             Map<String, Object> sourceInfo = ChartDataBuild.transTableNormal(xAxis, yAxis, view, calcResult.getOriginData(), extStack, desensitizationList);
             sourceInfo.put("sourceData", calcResult.getOriginData());
+            // 将汇总计算结果传递到导出数据中
+            if (calcResult.getData() != null && calcResult.getData().get("customSumResult") != null) {
+                sourceInfo.put("customSumResult", calcResult.getData().get("customSumResult"));
+            }
             view.setData(sourceInfo);
             return view;
         }
@@ -162,27 +190,39 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         dataMap.putAll(calcResult.getData());
         dataMap.putAll(mapTableNormal);
         dataMap.put("sourceFields", allFields);
-        mergeAssistField(calcResult.getDynamicAssistFields(), calcResult.getAssistData());
-        dataMap.put("dynamicAssistLines", calcResult.getDynamicAssistFields());
+        List<ChartSeniorAssistDTO> chartSeniorAssistDTOS = mergeAssistField(calcResult.getDynamicAssistFields(), calcResult.getAssistData(), calcResult.getDynamicAssistFieldsOriginList(), calcResult.getAssistDataOriginList());
+        dataMap.put("dynamicAssistLines", chartSeniorAssistDTOS);
         view.setData(dataMap);
-        view.setSql(Base64.getEncoder().encodeToString(calcResult.getQuerySql().getBytes()));
+        view.setSql(null);
         view.setDrill(isDrill);
         view.setDrillFilters(drillFilters);
         return view;
     }
 
-
-    protected void mergeAssistField(List<ChartSeniorAssistDTO> dynamicAssistFields, List<String[]> assistData) {
-        if (ObjectUtils.isEmpty(assistData)) {
-            return;
-        }
-        String[] strings = assistData.get(0);
-        for (int i = 0; i < dynamicAssistFields.size(); i++) {
-            if (i < strings.length) {
-                ChartSeniorAssistDTO chartSeniorAssistDTO = dynamicAssistFields.get(i);
-                chartSeniorAssistDTO.setValue(strings[i]);
+    protected List<ChartSeniorAssistDTO> mergeAssistField(List<ChartSeniorAssistDTO> dynamicAssistFields, List<String[]> assistData, List<ChartSeniorAssistDTO> dynamicAssistFieldsOriginList, List<String[]> assistDataOriginList) {
+        List<ChartSeniorAssistDTO> list = new ArrayList<>();
+        if (ObjectUtils.isNotEmpty(assistData)) {
+            String[] strings = assistData.getFirst();
+            for (int i = 0; i < dynamicAssistFields.size(); i++) {
+                if (i < strings.length) {
+                    ChartSeniorAssistDTO chartSeniorAssistDTO = dynamicAssistFields.get(i);
+                    chartSeniorAssistDTO.setValue(strings[i]);
+                    list.add(chartSeniorAssistDTO);
+                }
             }
         }
+
+        if (ObjectUtils.isNotEmpty(assistDataOriginList)) {
+            String[] stringsOriginList = assistDataOriginList.getLast();// 取最后一项，如果有其他运算逻辑需要取明细数据可增加逻辑
+            for (int i = 0; i < dynamicAssistFieldsOriginList.size(); i++) {
+                if (i < stringsOriginList.length) {
+                    ChartSeniorAssistDTO chartSeniorAssistDTO = dynamicAssistFieldsOriginList.get(i);
+                    chartSeniorAssistDTO.setValue(stringsOriginList[i]);
+                    list.add(chartSeniorAssistDTO);
+                }
+            }
+        }
+        return list;
     }
 
     protected List<ChartSeniorAssistDTO> getDynamicAssistFields(ChartViewDTO view) {
@@ -223,21 +263,25 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         return list;
     }
 
-    protected List<ChartViewFieldDTO> getAssistFields(List<ChartSeniorAssistDTO> list, List<ChartViewFieldDTO> yAxis) {
+    protected List<ChartViewFieldDTO> getAssistFields(List<ChartSeniorAssistDTO> list, List<ChartViewFieldDTO> axis) {
+        return getAssistFields(list, axis, SQLConstants.FIELD_ALIAS_Y_PREFIX);
+    }
+
+    protected List<ChartViewFieldDTO> getAssistFields(List<ChartSeniorAssistDTO> list, List<ChartViewFieldDTO> axis, String prefix) {
         List<ChartViewFieldDTO> res = new ArrayList<>();
         for (ChartSeniorAssistDTO dto : list) {
             DatasetTableFieldDTO curField = dto.getCurField();
-            ChartViewFieldDTO yField = null;
+            ChartViewFieldDTO targetField = null;
             String alias = "";
-            for (int i = 0; i < yAxis.size(); i++) {
-                ChartViewFieldDTO field = yAxis.get(i);
+            for (int i = 0; i < axis.size(); i++) {
+                ChartViewFieldDTO field = axis.get(i);
                 if (Objects.equals(field.getId(), curField.getId())) {
-                    yField = field;
-                    alias = String.format(SQLConstants.FIELD_ALIAS_Y_PREFIX, i);
+                    targetField = field;
+                    alias = String.format(prefix, i);
                     break;
                 }
             }
-            if (ObjectUtils.isEmpty(yField)) {
+            if (ObjectUtils.isEmpty(targetField)) {
                 continue;
             }
 
@@ -327,6 +371,7 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         if (ObjectUtils.isEmpty(fieldId) || StringUtils.isEmpty(summary)) {
             return false;
         }
+        FunctionConstant.resolveAssistAggregation(summary);
 
         DatasetTableFieldDTO datasetTableFieldDTO = datasetTableFieldManage.selectById(fieldId);
         if (ObjectUtils.isEmpty(datasetTableFieldDTO)) {
@@ -364,20 +409,95 @@ public class DefaultChartHandler extends AbstractChartPlugin {
         return conditionField;
     }
 
-    protected String assistSQL(String sql, List<ChartViewFieldDTO> assistFields) {
-        StringBuilder stringBuilder = new StringBuilder();
-        for (int i = 0; i < assistFields.size(); i++) {
-            ChartViewFieldDTO dto = assistFields.get(i);
-            if (i == (assistFields.size() - 1)) {
-                stringBuilder.append(dto.getSummary() + "(" + dto.getOriginName() + ")");
-            } else {
-                stringBuilder.append(dto.getSummary() + "(" + dto.getOriginName() + "),");
+    protected String assistSQL(String sql, List<ChartViewFieldDTO> assistFields, Map<Long, DatasourceSchemaDTO> dsMap, boolean crossDs) {
+        // get datasource prefix and suffix
+        String dsType = dsMap.entrySet().iterator().next().getValue().getType();
+        String prefix = "";
+        String suffix = "";
+        if (Arrays.stream(DatasourceConfiguration.DatasourceType.values()).map(DatasourceConfiguration.DatasourceType::getType).toList().contains(dsType)) {
+            DatasourceConfiguration.DatasourceType datasourceType = DatasourceConfiguration.DatasourceType.valueOf(dsType);
+            prefix = datasourceType.getPrefix();
+            suffix = datasourceType.getSuffix();
+        } else {
+            if (LicenseUtil.licenseValid()) {
+                List<XpackPluginsDatasourceVO> xpackPluginsDatasourceVOS = pluginManage.queryPluginDs();
+                List<XpackPluginsDatasourceVO> list = xpackPluginsDatasourceVOS.stream().filter(ele -> StringUtils.equals(ele.getType(), dsType)).toList();
+                if (ObjectUtils.isNotEmpty(list)) {
+                    XpackPluginsDatasourceVO first = list.getFirst();
+                    prefix = first.getPrefix();
+                    suffix = first.getSuffix();
+                } else {
+                    DEException.throwException("当前数据源插件不存在");
+                }
             }
         }
-        return "SELECT " + stringBuilder + " FROM (" + sql + ") tmp";
+
+        List<String> fieldList = new ArrayList<>();
+        for (int i = 0; i < assistFields.size(); i++) {
+            ChartViewFieldDTO dto = assistFields.get(i);
+            if (StringUtils.equalsIgnoreCase(dto.getSummary(), "last_item")) {
+                continue;
+            }
+            String summary = FunctionConstant.resolveAssistAggregation(dto.getSummary());
+            if (crossDs) {
+                fieldList.add(summary + "(" + dto.getOriginName() + ")");
+            } else {
+                fieldList.add(summary + "(" + prefix + dto.getOriginName() + suffix + ")");
+            }
+        }
+        return "SELECT " + Strings.join(",", fieldList) + " FROM (" + sql + ") tmp";
     }
 
-    protected void quickCalc(List<ChartViewFieldDTO> xAxis, List<ChartViewFieldDTO> yAxis, List<String[]> data) {
+    protected String assistSQLOriginList(String sql, List<ChartViewFieldDTO> assistFields, Map<Long, DatasourceSchemaDTO> dsMap, boolean crossDs) {
+        // get datasource prefix and suffix
+        String dsType = dsMap.entrySet().iterator().next().getValue().getType();
+        String prefix = "";
+        String suffix = "";
+        if (Arrays.stream(DatasourceConfiguration.DatasourceType.values()).map(DatasourceConfiguration.DatasourceType::getType).toList().contains(dsType)) {
+            DatasourceConfiguration.DatasourceType datasourceType = DatasourceConfiguration.DatasourceType.valueOf(dsType);
+            prefix = datasourceType.getPrefix();
+            suffix = datasourceType.getSuffix();
+        } else {
+            if (LicenseUtil.licenseValid()) {
+                List<XpackPluginsDatasourceVO> xpackPluginsDatasourceVOS = pluginManage.queryPluginDs();
+                List<XpackPluginsDatasourceVO> list = xpackPluginsDatasourceVOS.stream().filter(ele -> StringUtils.equals(ele.getType(), dsType)).toList();
+                if (ObjectUtils.isNotEmpty(list)) {
+                    XpackPluginsDatasourceVO first = list.getFirst();
+                    prefix = first.getPrefix();
+                    suffix = first.getSuffix();
+                } else {
+                    DEException.throwException("当前数据源插件不存在");
+                }
+            }
+        }
+
+        List<String> fieldList = new ArrayList<>();
+        for (int i = 0; i < assistFields.size(); i++) {
+            ChartViewFieldDTO dto = assistFields.get(i);
+            if (StringUtils.equalsIgnoreCase(dto.getSummary(), "last_item")) {
+                if (crossDs) {
+                    fieldList.add(dto.getOriginName());
+                } else {
+                    fieldList.add(prefix + dto.getOriginName() + suffix);
+                }
+            }
+        }
+        return "SELECT " + Strings.join(",", fieldList) + " FROM (" + sql + ") tmp";
+    }
+
+    protected List<String> mergeIds(List<ChartViewFieldDTO> xAxisExt, List<ChartViewFieldDTO> extStack) {
+        Set<String> idSet = new HashSet<>();
+        if (xAxisExt != null) {
+            xAxisExt.forEach(field -> idSet.add(String.valueOf(field.getId())));
+        }
+        if (extStack != null) {
+            extStack.forEach(field -> idSet.add(String.valueOf(field.getId())));
+        }
+        return new ArrayList<>(idSet);
+    }
+
+    protected void quickCalc(List<ChartViewFieldDTO> xAxis, List<ChartViewFieldDTO> yAxis
+            , List<ChartViewFieldDTO> xAxisExt, List<ChartViewFieldDTO> extStack, String chartType, List<String[]> data) {
         for (int i = 0; i < yAxis.size(); i++) {
             ChartViewFieldDTO chartViewFieldDTO = yAxis.get(i);
             ChartFieldCompareDTO compareCalc = chartViewFieldDTO.getCompareCalc();
@@ -436,10 +556,10 @@ public class DefaultChartHandler extends AbstractChartPlugin {
                                     if (new BigDecimal(lastValue).compareTo(BigDecimal.ZERO) == 0) {
                                         item[dataIndex] = null;
                                     } else {
-                                        item[dataIndex] = new BigDecimal(cValue)
-                                                .divide(new BigDecimal(lastValue).abs(), 8, RoundingMode.HALF_UP)
-                                                .subtract(new BigDecimal(1))
-                                                .setScale(8, RoundingMode.HALF_UP)
+                                        BigDecimal numerator = new BigDecimal(cValue).subtract(new BigDecimal(lastValue));
+                                        BigDecimal denominator = new BigDecimal(lastValue).abs();
+                                        item[dataIndex] = numerator
+                                                .divide(denominator, 8, RoundingMode.HALF_UP)
                                                 .toString();
                                     }
                                 } else if (StringUtils.equalsIgnoreCase(resultData, "pre")) {
@@ -469,6 +589,107 @@ public class DefaultChartHandler extends AbstractChartPlugin {
                         item[dataIndex] = new BigDecimal(cValue)
                                 .divide(sum, 8, RoundingMode.HALF_UP)
                                 .toString();
+                    }
+                } else if (StringUtils.equalsIgnoreCase(compareCalc.getType(), "accumulate")) {
+                    // 累加
+                    if (CollectionUtils.isEmpty(data)) {
+                        break;
+                    }
+                    if (Objects.isNull(extStack)) {
+                        extStack = Arrays.asList();
+                    }
+                    if (Objects.isNull(xAxisExt)) {
+                        xAxisExt = Arrays.asList();
+                    }
+                    boolean isStack = StringUtils.containsIgnoreCase(chartType, "stack") && CollectionUtils.isNotEmpty(extStack);
+                    boolean isGroup = StringUtils.containsIgnoreCase(chartType, "group")
+                            || (CollectionUtils.isNotEmpty(xAxisExt));
+                    if (isStack || isGroup) {
+                        if (CollectionUtils.isEmpty(xAxis)) {
+                            break;
+                        }
+                        final Map<String, Integer> mainIndexMap = new HashMap<>();
+                        final List<List<String[]>> mainMatrix = new ArrayList<>();
+                        // 排除group和stack的字段
+                        List<String> groupStackAxisIds = mergeIds(xAxisExt, extStack);
+                        List<ChartViewFieldDTO> xAxisBase = xAxis.stream().filter(ele -> !groupStackAxisIds.contains(String.valueOf(ele.getId()))).collect(Collectors.toList());
+                        if (CollectionUtils.isEmpty(xAxisBase) && CollectionUtils.isNotEmpty(xAxis)) {
+                            xAxisBase.add(xAxis.get(0));
+                        }
+                        data.forEach(item -> {
+                            String[] mainAxisArr = Arrays.copyOfRange(item, 0, xAxisBase.size());
+                            String mainAxis = StringUtils.join(mainAxisArr, '-');
+                            Integer index = mainIndexMap.get(mainAxis);
+                            if (index == null) {
+                                mainIndexMap.put(mainAxis, mainMatrix.size());
+                                List<String[]> tmp = new ArrayList<>();
+                                tmp.add(item);
+                                mainMatrix.add(tmp);
+                            } else {
+                                List<String[]> tmp = mainMatrix.get(index);
+                                tmp.add(item);
+                            }
+                        });
+                        int finalDataIndex = dataIndex;
+                        int subEndIndex = xAxisBase.size();
+                        if (CollectionUtils.isNotEmpty(xAxisExt)
+                                || StringUtils.containsIgnoreCase(chartType, "group")
+                                || StringUtils.containsIgnoreCase(chartType, "-mix")) {
+                            subEndIndex += xAxisExt.size();
+                        }
+                        if (StringUtils.containsIgnoreCase(chartType, "stack")) {
+                            subEndIndex += extStack.size();
+                        }
+                        int finalSubEndIndex = subEndIndex;
+                        // 存储上次的值
+                        Map<String, BigDecimal> preDataMap = new HashMap<>();
+                        //滑动累加
+                        for (int k = 1; k < mainMatrix.size(); k++) {
+                            List<String[]> preDataItems = mainMatrix.get(k - 1);
+                            List<String[]> curDataItems = mainMatrix.get(k);
+                            preDataItems.forEach(preDataItem -> {
+                                String[] groupStackAxisArr = Arrays.copyOfRange(preDataItem, xAxisBase.size(), finalSubEndIndex);
+                                String groupStackAxis = StringUtils.join(groupStackAxisArr, '-');
+                                String preVal = preDataItem[finalDataIndex];
+                                if (StringUtils.isBlank(preVal)) {
+                                    preVal = "0";
+                                }
+                                preDataMap.put(groupStackAxis, new BigDecimal(preVal));
+                            });
+                            curDataItems.forEach(curDataItem -> {
+                                String[] groupStackAxisArr = Arrays.copyOfRange(curDataItem, xAxisBase.size(), finalSubEndIndex);
+                                String groupStackAxis = StringUtils.join(groupStackAxisArr, '-');
+                                BigDecimal preValue = preDataMap.get(groupStackAxis);
+                                var curValue = curDataItem[finalDataIndex];
+                                if (StringUtils.isBlank(curValue)) {
+                                    return;
+                                }
+                                if (preValue != null) {
+                                    curDataItem[finalDataIndex] = new BigDecimal(curValue)
+                                            .add(preValue)
+                                            .toString();
+                                } else {
+                                    if (preDataMap.containsKey(groupStackAxis)) {
+                                        curDataItem[finalDataIndex] = new BigDecimal(curValue)
+                                                .add(preDataMap.get(groupStackAxis))
+                                                .toString();
+                                    }
+                                }
+                            });
+                        }
+                    } else {
+                        final int index = dataIndex;
+                        final AtomicReference<BigDecimal> accumValue = new AtomicReference<>(new BigDecimal(0));
+                        data.forEach(item -> {
+                            String val = item[index];
+                            BigDecimal curAccumValue = accumValue.get();
+                            if (!StringUtils.isBlank(val)) {
+                                BigDecimal curVal = new BigDecimal(val);
+                                curAccumValue = curAccumValue.add(curVal);
+                                accumValue.set(curAccumValue);
+                            }
+                            item[index] = curAccumValue.toString();
+                        });
                     }
                 }
             }
