@@ -11,6 +11,7 @@ import io.dataease.api.template.vo.MarketLatestReleaseVO;
 import io.dataease.api.template.vo.MarketMetaDataVO;
 import io.dataease.constant.CommonConstants;
 import io.dataease.exception.DEException;
+import io.dataease.i18n.Translator;
 import io.dataease.operation.manage.CoreOptRecentManage;
 import io.dataease.system.manage.SysParameterManage;
 import io.dataease.template.dao.auto.entity.VisualizationTemplateCategoryMap;
@@ -76,9 +77,15 @@ public class TemplateCenterManage {
             String sufUrl = sysParameterManage.groupVal("template.").get("template.url");
             String templateBaseInfo = HttpClientUtil.get(sufUrl + TEMPLATE_BASE_INFO_URL + templateName, null);
             MarketTemplateV2ItemResult baseItemInfo = JsonUtil.parseObject(templateBaseInfo, MarketTemplateV2ItemResult.class);
-            String templateUrl = sufUrl + "/store/apps/" + templateName +
-                    "/releases/download/" + baseItemInfo.getLatestRelease().getRelease().getMetadata().getName()
-                    + "/assets/" + baseItemInfo.getLatestRelease().getAssets().getFirst().getMetadata().getName();
+            String templateUrl = "";
+            if (baseItemInfo.getLatestRelease() != null) {
+                templateUrl = sufUrl + "/store/apps/" + templateName +
+                        "/releases/download/" + baseItemInfo.getLatestRelease().getRelease().getMetadata().getName()
+                        + "/assets/" + baseItemInfo.getLatestRelease().getAssets().getFirst().getMetadata().getName();
+            } else {
+                templateUrl = sufUrl + baseItemInfo.getApplication().getSpec().getLinks().get(0).getUrl();
+            }
+
             String templateInfo = HttpClientUtil.get(templateUrl, null);
             return JsonUtil.parseObject(templateInfo, TemplateManageFileDTO.class);
         } else {
@@ -96,7 +103,8 @@ public class TemplateCenterManage {
         config.setConnectTimeout(5000);
         config.setSocketTimeout(10000);
         config.setConnectionRequestTimeout(5000);
-        return HttpClientUtil.get(url, config);
+        return HttpClientUtil.
+                get(url, config);
     }
 
     private MarketTemplateV2BaseResponse templateQuery(Map<String, String> templateParams) {
@@ -116,7 +124,7 @@ public class TemplateCenterManage {
             return baseResponseV2Trans(templateQuery(templateParams), searchTemplateFromManage(), templateParams.get("template.url"));
         } catch (Exception e) {
             LogUtil.error(e);
-            e.printStackTrace();
+            LogUtil.error(e);
         }
         return null;
     }
@@ -148,7 +156,6 @@ public class TemplateCenterManage {
         return result;
     }
 
-
     public MarketBaseResponse searchTemplateRecommend() {
         MarketTemplateV2BaseResponse v2BaseResponse = null;
         Map<String, String> templateParams = sysParameterManage.groupVal("template.");
@@ -166,11 +173,11 @@ public class TemplateCenterManage {
     public MarketPreviewBaseResponse searchTemplatePreview() {
         try {
             MarketBaseResponse baseContentRsp = searchTemplate();
-            List<MarketMetaDataVO> categories = baseContentRsp.getCategories().stream().filter(category -> !"最近使用".equals(category.getLabel())).collect(Collectors.toList());
+            List<MarketMetaDataVO> categories = baseContentRsp.getCategories().stream().filter(category -> !Translator.get("i18n_template_recent").equals(category.getLabel())).toList();
             List<TemplateMarketDTO> contents = baseContentRsp.getContents();
             List<TemplateMarketPreviewInfoDTO> previewContents = new ArrayList<>();
             categories.forEach(category -> {
-                if ("推荐".equals(category.getLabel())) {
+                if (Translator.get("i18n_template_recommend").equals(category.getLabel())) {
                     previewContents.add(new TemplateMarketPreviewInfoDTO(category, contents.stream().filter(template -> "Y".equals(template.getSuggest())).collect(Collectors.toList())));
                 } else {
                     previewContents.add(new TemplateMarketPreviewInfoDTO(category, contents.stream().filter(template -> checkCategoryMatch(template, category.getLabel())).collect(Collectors.toList())));
@@ -189,7 +196,7 @@ public class TemplateCenterManage {
             return template.getCategories().stream()
                     .anyMatch(category -> categoryNameMatch.equals(category.getName()));
         } catch (Exception e) {
-            e.printStackTrace();
+            LogUtil.error(e);
             return false;
         }
     }
@@ -205,7 +212,7 @@ public class TemplateCenterManage {
                 MarketApplicationSpecVO spec = marketTemplateV2ItemResult.getApplication().getSpec();
                 MarketApplicationMetaDataVO metadata = marketTemplateV2ItemResult.getApplication().getMetadata();
                 if ("Y".equalsIgnoreCase(spec.getSuggest())) {
-                    contents.add(new TemplateMarketDTO(metadata.getName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), "Y"));
+                    contents.add(new TemplateMarketDTO(metadata.getName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), "Y", spec.getTemplateClassification()));
                 }
             });
         }
@@ -235,7 +242,7 @@ public class TemplateCenterManage {
         List<MarketMetaDataVO> categoryVO = getCategoriesObject().stream().filter(node -> !"全部".equalsIgnoreCase(node.getLabel())).collect(Collectors.toList());
         Map<String, String> categoriesMap = categoryVO.stream()
                 .collect(Collectors.toMap(MarketMetaDataVO::getValue, MarketMetaDataVO::getLabel));
-        List<String> activeCategoriesName = new ArrayList<>(Arrays.asList("最近使用", "推荐"));
+        List<String> activeCategoriesName = new ArrayList<>(Arrays.asList(Translator.get("i18n_template_recent"), Translator.get("i18n_template_recommend")));
         contents.stream().forEach(templateMarketDTO -> {
             Long recentUseTime = useTime.get(templateMarketDTO.getId());
             templateMarketDTO.setRecentUseTime(recentUseTime == null ? 0 : recentUseTime);
@@ -245,7 +252,7 @@ public class TemplateCenterManage {
             v2BaseResponse.getItems().stream().forEach(marketTemplateV2ItemResult -> {
                 MarketApplicationSpecVO spec = marketTemplateV2ItemResult.getApplication().getSpec();
                 MarketApplicationMetaDataVO metadata = marketTemplateV2ItemResult.getApplication().getMetadata();
-                contents.add(new TemplateMarketDTO(metadata.getName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), spec.getSuggest()));
+                contents.add(new TemplateMarketDTO(metadata.getName(), spec.getDisplayName(), spec.getScreenshots().get(0).getUrl(), spec.getLinks().get(0).getUrl(), categoriesMap.get(spec.getLabel()), spec.getTemplateType(), useTime.get(spec.getReadmeName()), spec.getSuggest(), spec.getTemplateClassification()));
                 if (categoriesMap.get(spec.getLabel()) != null) {
                     activeCategoriesName.add(categoriesMap.get(spec.getLabel()));
                 }
@@ -256,7 +263,6 @@ public class TemplateCenterManage {
         return new MarketBaseResponse(url, categoryVO.stream().filter(node -> activeCategoriesName.contains(node.getLabel())).collect(Collectors.toList()), contents);
     }
 
-
     public List<String> getCategories() {
         return getCategoriesV2().stream().map(MarketMetaDataVO::getLabel)
                 .collect(Collectors.toList());
@@ -264,7 +270,7 @@ public class TemplateCenterManage {
 
     public List<MarketMetaDataVO> getCategoriesObject() {
         List<MarketMetaDataVO> result = getCategoriesV2();
-        result.add(0, new MarketMetaDataVO("recent", "最近使用", CommonConstants.TEMPLATE_SOURCE.PUBLIC));
+        result.add(0, new MarketMetaDataVO("recent", Translator.get("i18n_template_recent"), CommonConstants.TEMPLATE_SOURCE.PUBLIC));
         return result;
     }
 
@@ -285,7 +291,7 @@ public class TemplateCenterManage {
             String resultStr = marketGet(templateParams.get("template.url") + TEMPLATE_META_DATA_URL, null);
             MarketMetaDataBaseResponse metaData = JsonUtil.parseObject(resultStr, MarketMetaDataBaseResponse.class);
             allCategories.addAll(metaData.getLabels());
-            allCategories.add(0, new MarketMetaDataVO("suggest", "推荐", CommonConstants.TEMPLATE_SOURCE.PUBLIC));
+            allCategories.add(0, new MarketMetaDataVO("suggest", Translator.get("i18n_template_recommend"), CommonConstants.TEMPLATE_SOURCE.PUBLIC));
         } catch (Exception e) {
             LogUtil.error("模板市场分类获取错误", e);
         }
